Update dependencies and import statements

--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
         "@master/css-extractor.vite": "workspace:^",
         "@master/eslint-plugin-css": "workspace:^",
         "@swc-node/jest": "^1.7.0",
-        "@techor/fs": "^2.6.5",
-        "@techor/glob": "^2.6.5",
-        "@techor/jest-dom": "^2.6.5",
-        "@techor/repo": "^2.6.5",
+        "techor": "^3.0.3",
+        "@techor/fs": "^3.0.3",
+        "@techor/glob": "^3.0.3",
+        "@techor/jest-dom": "^3.0.3",
+        "@techor/repo": "^3.0.3",
         "@types/node-fetch": "^2.6.11",
         "@types/shuffle-array": "^1.0.5",
         "cheerio": "1.0.0-rc.12",
