--- a/packages/class-variant/package.json
+++ b/packages/class-variant/package.json
@@ -1,8 +1,8 @@
 {
     "name": "class-variant",
     "scripts": {
-        "build": "techor pack --declare",
-        "dev": "pnpm run build --watch",
+        "build": "techor build",
+        "dev": "techor dev",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
         "test": "jest"
@@ -27,15 +27,15 @@
         "mastercss"
     ],
     "sideEffects": false,
-    "main": "./dist/index.bundle.js",
-    "jsnext:main": "./dist/index.bundle.mjs",
-    "esnext": "./dist/index.bundle.mjs",
-    "module": "./dist/index.bundle.mjs",
+    "main": "./dist/index.cjs",
+    "jsnext:main": "./dist/index.mjs",
+    "esnext": "./dist/index.mjs",
+    "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "require": "./dist/index.bundle.js",
-            "import": "./dist/index.bundle.mjs",
+            "require": "./dist/index.cjs",
+            "import": "./dist/index.mjs",
             "types": "./dist/index.d.ts"
         }
     },
