--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,12 +1,13 @@
 {
     "name": "@master/css-cli",
     "scripts": {
-        "build": "techor pack --platform node",
-        "dev": "pnpm run build --watch",
+        "build": "techor build",
+        "dev": "techor dev",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
         "test": "jest"
     },
+    "type": "module",
     "license": "MIT",
     "description": "Master CSS CLI",
     "author": "Aoyue Design LLC.",
@@ -26,8 +27,8 @@
         "mastercss"
     ],
     "bin": {
-        "mcss": "./dist/bin/index.bundle.js",
-        "mastercss": "./dist/bin/index.bundle.js"
+        "mcss": "./dist/bin/index.mjs",
+        "mastercss": "./dist/bin/index.mjs"
     },
     "files": [
         "dist"
@@ -39,13 +40,13 @@
         "@master/css": "workspace:^",
         "@master/css-extractor": "workspace:^",
         "@master/css-server": "workspace:^",
-        "@techor/extend": "^2.6.5",
-        "@techor/fs": "^2.6.5",
-        "@techor/glob": "^2.6.5",
-        "@techor/log": "^2.6.5",
+        "@techor/extend": "^3.0.3",
+        "@techor/fs": "^3.0.3",
+        "@techor/glob": "^3.0.3",
+        "@techor/log": "^3.0.3",
         "chokidar": "^3.5.3",
         "commander": "^12.0.0",
-        "explore-config": "^2.6.5",
+        "explore-config": "^3.0.3",
         "minimatch": "^9.0.1",
         "pretty-hrtime": "^1.0.3"
     },
