--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@master/css.react",
     "scripts": {
-        "build": "techor pack --declare",
-        "dev": "pnpm run build --watch",
+        "build": "techor build",
+        "dev": "techor dev",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
         "test": "jest"
@@ -36,29 +36,29 @@
         "solidjs"
     ],
     "sideEffects": false,
-    "main": "./dist/index.js",
+    "main": "./dist/index.cjs",
     "jsnext:main": "./dist/index.mjs",
     "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "require": "./dist/index.js",
+            "require": "./dist/index.cjs",
             "import": "./dist/index.mjs",
             "types": "./dist/index.d.ts"
         },
         "./CSSRuntimeProvider": {
-            "require": "./dist/CSSRuntimeProvider.js",
+            "require": "./dist/CSSRuntimeProvider.cjs",
             "import": "./dist/CSSRuntimeProvider.mjs",
             "types": "./dist/CSSRuntimeProvider.d.ts"
         },
         "./ThemeServiceProvider": {
-            "require": "./dist/ThemeServiceProvider.js",
+            "require": "./dist/ThemeServiceProvider.cjs",
             "import": "./dist/ThemeServiceProvider.mjs",
             "types": "./dist/ThemeServiceProvider.d.ts"
         },
         "./styled": {
-            "require": "./dist/styled.js",
+            "require": "./dist/styled.cjs",
             "import": "./dist/styled.mjs",
             "types": "./dist/styled.d.ts"
         }
