--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -37,29 +37,29 @@
         "nuxtjs"
     ],
     "sideEffects": false,
-    "main": "./dist/index.js",
+    "main": "./dist/index.cjs",
     "jsnext:main": "./dist/index.mjs",
     "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "require": "./dist/index.js",
+            "require": "./dist/index.cjs",
             "import": "./dist/index.mjs",
             "types": "./dist/index.d.ts"
         },
         "./CSSRuntimeProvider": {
-            "require": "./dist/CSSRuntimeProvider.js",
+            "require": "./dist/CSSRuntimeProvider.cjs",
             "import": "./dist/CSSRuntimeProvider.mjs",
             "types": "./dist/CSSRuntimeProvider.d.ts"
         },
         "./ThemeServiceProvider": {
-            "require": "./dist/ThemeServiceProvider.js",
+            "require": "./dist/ThemeServiceProvider.cjs",
             "import": "./dist/ThemeServiceProvider.mjs",
             "types": "./dist/ThemeServiceProvider.d.ts"
         },
         "./styled": {
-            "require": "./dist/styled.js",
+            "require": "./dist/styled.cjs",
             "import": "./dist/styled.mjs",
             "types": "./dist/styled.d.ts"
         }
@@ -88,7 +88,7 @@
     },
     "dependencies": {
         "@master/css-runtime": "workspace:^",
-        "@techor/extend": "^2.6.5",
+        "@techor/extend": "^3.0.3",
         "class-variant": "workspace:^",
         "clsx": "^2.1.0",
         "theme-service": "workspace:^"
