--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,11 +1,15 @@
 {
     "name": "@master/css.svelte",
     "type": "module",
-    "scripts": {
-        "build": "techor build \"./src/**/*.{ts,svelte}\" --bundle --format esm --esm-ext .js --entry-names [dir]/[name]",
-        "dev": "techor dev",
-        "type-check": "tsc --noEmit"
-    },
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build && pnpm run package",
+		"preview": "vite preview",
+		"package": "svelte-kit sync && svelte-package && publint",
+		"prepublishOnly": "pnpm run package",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
     "license": "MIT",
     "description": "Integrate Master CSS in Svelte way",
     "author": "Aoyue Design LLC.",
@@ -26,31 +30,39 @@
         "mastercss"
     ],
     "sideEffects": false,
-    "main": "./dist/index.cjs",
-    "jsnext:main": "./dist/index.jcjss",
-    "esnext": "./dist/index.cjs",
-    "module": "./dist/index.cjs",
-    "types": "./dist/index.d.ts",
-    "exports": {
-        ".": {
-            "import": "./dist/index.cjs",
-            "types": "./dist/index.d.ts"
-        }
-    },
-    "files": [
-        "dist"
-    ],
+    "svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
+	],
     "publishConfig": {
         "access": "public"
     },
-    "peerDependencies": {
-        "svelte": ">= 3.0.0"
-    },
+	"peerDependencies": {
+		"svelte": "^4.0.0"
+	},
     "dependencies": {
         "@master/css-runtime": "workspace:^",
         "theme-service": "workspace:^"
     },
-    "devDependencies": {
-        "@tsconfig/svelte": "^3.0.0"
-    }
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/package": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"publint": "^0.1.9",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.11"
+	}
 }
