--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css.react",
     "scripts": {
-        "build": "techor build",
+        "build": "techor build \"src/**/*.tsx\"",
         "dev": "techor dev",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
