--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-validator",
     "scripts": {
-        "build": "techor build",
+        "build": "techor build \"src/**/*.ts\"",
         "dev": "techor dev",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
@@ -29,7 +29,17 @@
     ],
     "sideEffects": false,
     "main": "./dist/index.cjs",
+    "module": "./dist/index.mjs",
+    "jsnext:main": "./dist/index.mjs",
+    "esnext": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.cjs",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "files": [
         "dist"
     ],
