--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "techor build \"src/**/*.ts\"",
-        "dev": "techor dev",
+        "dev": "pnpm build -w",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
     },
