Fix import statements and remove unused code

--- a/examples/nuxt.js-with-runtime-rendering/package.json
+++ b/examples/nuxt.js-with-runtime-rendering/package.json
@@ -12,7 +12,8 @@
         "@master/css.vue": "workspace:^"
     },
     "devDependencies": {
-        "@types/node": "^20",
-        "nuxt": "^3.5.2"
+        "nuxt": "^3.10.2",
+        "vue": "^3.4.19",
+        "vue-router": "^4.2.5"
     }
 }
