--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "techor build",
-        "dev": "techor dev",
+        "dev": "pnpm build --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
         "test": "jest"
