--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -2,7 +2,7 @@
     "name": "@master/eslint-plugin-css",
     "scripts": {
         "build": "techor build \"src/**/*.ts\"",
-        "dev": "techor dev",
+        "dev": "pnpm build --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
