--- a/packages/extractor.webpack/package.json
+++ b/packages/extractor.webpack/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css-extractor.webpack",
     "scripts": {
         "build": "techor build \"src/**/*.ts\"",
-        "dev": "techor dev",
+        "dev": "pnpm build --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
     },
