--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css-extractor",
     "scripts": {
         "build": "techor build \"src/**/*.ts\"",
-        "dev": "techor dev",
+        "dev": "techor build --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
         "test": "jest"
