--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css.react",
     "scripts": {
         "build": "techor build \"src/**/*.tsx\"",
-        "dev": "techor dev",
+        "dev": "pnpm build --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
         "e2e": "playwright test -c e2e/playwright-ct.config.ts"
